# kinova7dof-pick-place-yolov8

./: .gitignore  .gitignore.txt  CMakeLists.txt  GUI_kinova7d_pick_place_yolov8.py  README.md
Work_volume_Estimation/: WorkVolume.txt  WorkVolumePlot.py
bottle_tracking_and_saving/: calibration_homography_pixel_to_real_world_mapping.py  homography_main.py  homography_tracking_module.py
data/: homography_calibration_pixel_to_real.txt  homography_calibration_points.txt
include/: kinova_ik.h  move_to_point_angular_input.h
src/: kinova_ik.cpp  main.cpp  move_to_point_angular_input.cpp
